--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jslicense-apache-2.0",
   "description": "the Apache License, version 2.0 License",
-  "version": "0.0.0-prerelease",
+  "version": "0.1.0",
   "author": "Kyle E. Mitchell <kyle@kemitchell.com> (http://kemitchell.com)",
   "bugs": "https://github.com/jslicense/jslicense-apache-2.0/issues",
   "homepage": "https://jslicense.github.io",
