--- a/package.json
+++ b/package.json
@@ -12,5 +12,5 @@
   ],
   "license": "Apache-2.0",
   "main": "index.js",
-  "repository": "jslicense/apache-2.0"
+  "repository": "jslicense/jslicense-apache-2.0"
 }
