improve description in package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jslicense-apache-2.0",
-  "description": "the Apache License, version 2.0 License",
+  "description": "the Apache License, version 2.0 License in jslicense format",
   "version": "0.1.0",
   "author": "Kyle E. Mitchell <kyle@kemitchell.com> (http://kemitchell.com)",
   "bugs": "https://github.com/jslicense/jslicense-apache-2.0/issues",
